# mention-miner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  export_csv.py  extract_only.py  pyproject.toml  render_network.py  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
annotations_repos/: Andrew_Piper.md  Crawford.md  Danielewski.md  Davis.md  Digital_Humanities.md  Gabi_Kirilloff.md  Henry.md  Hoyt_Long.md  INDEX.md  In.md  Kirsch.md  May.md  Ross.md  Sarah_E._Bond.md  Sinclair.md  Ted_Underwood.md  Timothy_Brennan.md  Winter.md  Year.md  counts.1_Da.md  repos_catalog.csv
docs/: README_CSV.md
notes_with_repos/: Alecia_Y._Jackson.md  Andrew_Piper.md  Ben_Schmidt.md  Bode.md  Cordell.md  Critical_Conceptions.md  Daniel_J._Cohen.md  David_Bamman.md  David_Herman.md  Davis.md  Drucker.md  Gabi_Kirilloff.md  Helen_Nissenbaum.md  Henry.md  Hoyt_Long.md  INDEX.md  In.md  Jane_Eyre.md  Kate_Crawford.md  Lapsansky.md  Lather.md  Lisa_A._Mazzei.md  Liu.md  Manfred_Jahn.md  Marie-Laure_Ryan.md  May.md  Moby_Dick.md  Project_Gutenberg.md  Sabrina_Lee.md  Safiya_Noble.md  Sarah_E._Bond.md  Sinclair.md  Ted_Underwood.md  Timothy_Brennan.md  Year.md  repos_catalog.csv
scripts/: build_annotations_with_repos.py  clean_and_rebuild.py  export_csv.py  extract_kirilloff.py  extract_single.py  extract_single_big.py  ingest_pdfs.py  make_reading_list.py  render_png.py  render_static_html.py  top_pairs.py  top_scholars.py
tests/: test_extract.py
(+19 files in other folders)
